[workspace]
resolver = "2"
members = [
    "crates/svr4-fs-core",
    "crates/svr4-disk",
    "crates/svr4-ufs",
    "crates/svr4-bfs",
    "bins/svr4-disk-image",
    "bins/svr4-ufs-mount",
    "bins/svr4-ufs-populate",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.74"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
