[package]
name = "svr4-disk-image"
description = "Inspect and construct raw SVR4 disk images"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "svr4-disk-image"
path = "src/main.rs"

[dependencies]
svr4-disk = { path = "../../crates/svr4-disk" }
svr4-ufs = { path = "../../crates/svr4-ufs" }
svr4-bfs = { path = "../../crates/svr4-bfs" }
svr4-fs-core = { path = "../../crates/svr4-fs-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
