[package]
name = "svr4-ufs-mount"
description = "Mount an SVR4 UFS slice via FUSE (read/write)"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "svr4-ufs-mount"
path = "src/main.rs"

[dependencies]
svr4-fs-core = { path = "../../crates/svr4-fs-core" }
svr4-ufs = { path = "../../crates/svr4-ufs" }
svr4-disk = { path = "../../crates/svr4-disk" }
fuser = "0.17"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
