[package]
name = "svr4-bfs"
description = "SVR4 Boot File System (BFS): the simple contiguous filesystem used for the /stand slice"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
svr4-fs-core = { path = "../svr4-fs-core" }
svr4-disk = { path = "../svr4-disk" }

[dev-dependencies]
tempfile = "3"
