[package]
name = "svr4-ufs"
description = "SVR4 UFS filesystem reader (Phase 2: read path)"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
svr4-fs-core = { path = "../svr4-fs-core" }
svr4-disk = { path = "../svr4-disk" }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
sha2 = "0.10"
